# deploy-python-package-on-pypi

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: main.yml
src/my_super_python_package/: skeleton.py
tests/: test_my_super_python_package.py
